fix boardcontainer on mobile

--- a/src/static/static/dangeru.css
+++ b/src/static/static/dangeru.css
@@ -12,6 +12,9 @@ img {
     #maincontainer {
         width: 90%;
     }
+    #boardcontainer {
+      margin-bottom: 25px;
+    }
 }
 @font-face {
     font-family: 'CyberpunkWaifus';
